--- a/src/main/resources/craftminebiomefix.mixins.json
+++ b/src/main/resources/craftminebiomefix.mixins.json
@@ -4,7 +4,7 @@
 	"compatibilityLevel": "JAVA_21",
 	"mixins": [
 		"WorldGenBuilderAccessor",
-		"MineCraftingMenuMixin"
+		"DimensionGeneratorMixin"
 	],
 	"injectors": {
 		"defaultRequire": 1
